--- a/frontend/src/components/Button.module.scss
+++ b/frontend/src/components/Button.module.scss
@@ -6,6 +6,8 @@
   padding: 2px 4px;
   border: none;
   border-radius: 6px;
+  margin-bottom: 5px;
+  margin-right: 3px;
   cursor: pointer;
   transition: background-color 0.3s;
 
