--- a/frontend/src/components/AttendeeForm.module.scss
+++ b/frontend/src/components/AttendeeForm.module.scss
@@ -9,8 +9,9 @@
     .field {
       margin-bottom: 5px;
       margin-right: 3px;
-      border: 0cap;
-      //background-color: red;
+      border: solid;
+      border-color: gray;
+      // border-radius: 5px;
     }
     .td{
       width: 140px;
